# LoBot

./: .env  .gitignore  README.md  bot.py
LoBot/: .dockerignore  .env.prod  .gitignore  README.md  bot.py  global_singletion.py  monitor.py  pyproject.toml  requirements.txt  start.bat
LoBot/lo_bot/: shared.py
LoBot/lo_bot/config/: pg_config.toml  pg_connect_example.toml  whitelist.toml
LoBot/lo_bot/history/: connect_sql.py
LoBot/lo_bot/plugins/weather/: __init__.py  config.py
LoBot/lo_bot/src/adapters/: event_parser.py  qq_entry.py
LoBot/lo_bot/src/core/llm/: __init__.py  ai_chat.py  llm_client.py  models.json
LoBot/lo_bot/src/core/llm/ai_adapter/: OpenAI_adapter.py  custom_error.py  shared.py
LoBot/lo_bot/src/core/memory/: character_profile.toml  languge_style.toml  memory.json  memory_manager.py  memory_write.py
LoBot/lo_bot/src/core/memory/PG/: conncet.py  short_item.py
LoBot/lo_bot/src/db/PG/: conncet.py  short_item.py
LoBot/lo_bot/src/logic/: chat_flow.py
LoBot/lo_bot/src/logic/handle_func/: msg_handle.py
LoBot/lo_bot/src/logic/plugin_map/: available_plugins.json  map.json
LoBot/lo_bot/src/plugins/: plugins_base.py  plugins_manager.py  plugins_meta.json  qq_entry.py
LoBot/lo_bot/src/plugins/aicaht/: __init__.py
LoBot/lo_bot/src/plugins/divination/: __init__.py  content.json
LoBot/lo_bot/src/plugins/log_handle/: __init__.py
LoBot/lo_bot/src/plugins/qq_entry/: __init__.py
LoBot/lo_bot/src/plugins/weather/: __init__.py
