[project]
name = "LoBot"
version = "0.1.0"
description = "LoBot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
]

[tool.nonebot]
plugin_dirs = ["lo_bot/src/adapters/qq_entry.py"]
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}, {name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12"}]

[tool.nonebot.plugins]
"@local" = []
